--- a/projects/2.html
+++ b/projects/2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Pine-studio. Большая квартира для семьи</title>
+  <title>Pine-studio. Гостиная в классическом стиле</title>
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../default-skin/default-skin.css">
@@ -54,9 +54,9 @@
 
 
   <!-- ПЕРВИЙ ВИДИМЫй БЛОК НА СТРАНИЦЕ hero -->
-  <div class="project__hero project_1">
+  <div class="project__hero project_2">
     <div class="project__hero__content">
-      <span class="title project__title">Большая квартира для семьи</span>
+      <span class="title project__title">Гостиная в классическом стиле</span>
       <span class="project__subtitle">Дизайн проект - Ненашкина Евгения</span>
     </div>
   </div>
@@ -115,58 +115,76 @@
 
   <div class="portfolio">
     <div class="container">
-      <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
+      <div class="portfolio-cards project-portfolio_2" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="../img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/1.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="../img/2/render/1.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/2.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="../img/2/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/3.jpg" itemprop="contentUrl" data-size="1900x2000">
+            <img src="../img/2/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/4.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/4.jpg" itemprop="contentUrl" data-size="1900x2000">
+            <img src="../img/2/render/4.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/5.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/5.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="../img/2/render/5.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/6.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/6.jpg" itemprop="contentUrl" data-size="2000x1500">
+            <img src="../img/2/render/6.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/7.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/7.jpg" itemprop="contentUrl" data-size="1800x1500">
+            <img src="../img/2/render/7.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/8.jpg" itemprop="contentUrl" data-size="1800x1500">
+            <img src="../img/2/render/8.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/2/render/9.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="../img/2/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/2/render/10.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="../img/2/render/10.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/2/render/11.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="../img/2/render/11.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/2/render/12.jpg" itemprop="contentUrl" data-size="1800x1450">
+            <img src="../img/2/render/12.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
