--- a/projects/3.html
+++ b/projects/3.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Pine-studio. Большая квартира для семьи</title>
+  <title>Pine-studio</title>
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../default-skin/default-skin.css">
@@ -54,10 +54,10 @@
 
 
   <!-- ПЕРВИЙ ВИДИМЫй БЛОК НА СТРАНИЦЕ hero -->
-  <div class="project__hero project_1">
+  <div class="project__hero project_3">
     <div class="project__hero__content">
-      <span class="title project__title">Большая квартира для семьи</span>
-      <span class="project__subtitle">Дизайн проект - Ненашкина Евгения</span>
+      <span class="title project__title">Двухуровневая квартира в стиле минимализм</span>
+      <span class="project__subtitle">Дизайн проект - Жуминская Елена</span>
     </div>
   </div>
   <!-- /.project__hero -->
@@ -115,58 +115,58 @@
 
   <div class="portfolio">
     <div class="container">
-      <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
+      <div class="portfolio-cards project-portfolio_3" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="../img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
+            <img src="../img/3/render/1.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/4.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/4.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/5.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/5.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/5.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/6.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/6.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/7.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/7.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/8.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/3/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/3/render/9.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
