Переписала класс portfolio-card_hover на тег a, тк не переходит по ссылке

--- a/index.html
+++ b/index.html
@@ -289,36 +289,36 @@
     <!-- РАЗДЕЛ С ГАЛЕРЕЕЙ ПОРТФОЛИО -->
     <div class="section portfolio" id="portfolio">
       <div class="container">
-        <div class="portfolio-cards">
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
+        <div class="portfolio-cards portfolio_height">
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="projects/2.html" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/3.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="projects/3.html" target="_blank"><img src="img/portfolio/3.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/7.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/7.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
           </div>
-          <div class="portfolio-card portfolio-card_hover">
-            <a href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
+          <div class="portfolio-card">
+            <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
           </div>
         </div>
         <!-- /.portfolio-wrap -->
