--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div class="container">
       <div class="portfolio-cards portfolio_height">
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="projects/1.html" target="_blank"><img src="img/portfolio/7.jpg"
+          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/7.jpg"
               alt=""></a>
         </div>
         <div class="portfolio-card">
@@ -337,7 +337,7 @@
           <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
           <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
