--- a/projects/1.html
+++ b/projects/1.html
@@ -139,6 +139,78 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/27.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/27.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/25.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/25.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/26.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/26.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/28.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/28.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/24.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/24.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/29.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/29.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/10.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/10.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/11.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/11.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/12.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/12.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/13.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="../img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
             <img src="../img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
@@ -169,14 +241,62 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/1/render/19.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/19.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="../img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="../img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="../img/1/render/20.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/20.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/21.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/21.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/22.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/22.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/23.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/23.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/14.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/14.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/15.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/15.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/16.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/16.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/17.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/17.jpg" itemprop="thumbnail" alt="Image description" />
+          </a>
+        </figure>
+
+        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+          <a href="../img/1/render/18.jpg" itemprop="contentUrl" data-size="2000x1800">
+            <img src="../img/1/render/18.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
