Адаптив главной страницы от 750px и больше

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="img/header/круглый белый внутри.png" alt="">
         </div>
         <!-- /.header-logo -->
-        <div class="header_title">
+        <div class="page-title header_title">
           студия 3D визуализации интерьеров
         </div>
         <!-- /.header_title -->
@@ -413,28 +413,28 @@
           </div>
           <!-- /.contacts-email -->
           <div class="contacts-social">
-            <ul class="contacts-social__list">
-              <li class="contacts-social__item whatsapp">
+            <ul class="social__list contacts-social__list">
+              <li class="social__item contacts-social__item whatsapp">
                 <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
                   <i class="fab fa-whatsapp"></i>
                 </a>
               </li>
-              <li class="contacts-social__item instagram">
+              <li class="social__item contacts-social__item instagram">
                 <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </li>
-              <li class="contacts-social__item telegram">
+              <li class="social__item contacts-social__item telegram">
                 <a href="#" target="_blank">
                   <i class="fab fa-telegram-plane"></i>
                 </a>
               </li>
-              <li class="contacts-social__item pinterest">
+              <li class="social__item contacts-social__item pinterest">
                 <a href="https://www.pinterest.ru/pinestudio3d" target="_blank">
                   <i class="fab fa-pinterest-p"></i>
                 </a>
               </li>
-              <li class="contacts-social__item behance">
+              <li class="social__item contacts-social__item behance">
                 <a href="https://www.behance.net/pinestudio3d" target="_blank">
                   <i class="fab fa-behance"></i>
                 </a>
@@ -558,33 +558,33 @@
           <a href="index.html"><img src="img/footer/White.png" alt=""></a>
         </div>
         <!-- /.footer-logo -->
-        <div class="header_title">
+        <div class="page-title footer_title">
           студия 3D визуализации интерьеров
         </div>
         <!-- /.header_title -->
         <div class="footer-social">
-          <ul class="footer-social__list list">
-            <li class="footer-social__item whatsapp">
+          <ul class="list social__list footer-social__list">
+            <li class="social__item footer-social__item whatsapp">
               <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
                 <i class="fab fa-whatsapp"></i>
               </a>
             </li>
-            <li class="footer-social__item instagram">
+            <li class="social__item footer-social__item instagram">
               <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
-            <li class="footer-social__item telegram">
+            <li class="social__item footer-social__item telegram">
               <a href="#" target="_blank">
                 <i class="fab fa-telegram-plane"></i>
               </a>
             </li>
-            <li class="footer-social__item pinterest">
+            <li class="social__item footer-social__item pinterest">
               <a href="https://www.pinterest.ru/pinestudio3d" target="_blank">
                 <i class="fab fa-pinterest-p"></i>
               </a>
             </li>
-            <li class="footer-social__item behance">
+            <li class="social__item footer-social__item behance">
               <a href="https://www.behance.net/pinestudio3d" target="_blank">
                 <i class="fab fa-behance"></i>
               </a>
