--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src="img/header/круглый белый внутри.png" alt="">
         </div>
         <!-- /.header-logo -->
-        <div class="page-title header_title">
+        <div class="page-title header__title">
           студия 3D визуализации интерьеров
         </div>
         <!-- /.header_title -->
