Анимация бургер меню на CSS

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <li class="header-list__item"><a href="#contacts">Контакты</a></li>
           </ul>
           <!-- /.list header-list -->
-          <button class="header-burger burger_alert"><i class="fas fa-bars"></i></button>
+          <!-- <button class="header-burger burger_alert"><i class="fas fa-bars"></i></button> -->
+          <button class="header-burger burger_alert "><span class="header-burger__line"></span></button>
         </nav>
         <!-- /.header-nav -->
       </div>
@@ -47,9 +48,9 @@
 	<!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
 	<div class="menu-mobile" id="menu_mobile">
 			<div class="menu-block">
-				<button class="menu__close" id="burger_close">
+				<!-- <button class="menu__close" id="burger_close">
 					<i class="fa fa-times"></i>
-				</button>
+				</button> -->
 				<nav class="menu-nav">
 					<ul class="menu-list">
 						<li class="menu-list__item"><a href="#edge">О нас</a></li>
