Вынесла настройки плагина до/после в отдельный файл twentytwenty-settings.js

--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
         <div class="contacts-info">
           <h1 class="title contacts__title">Связаться с нами</h1>
           <div class="contacts-phone">
-            <a href="tel:8(921)562-33-27">+7 921 562-33-27</a>
+            <a href="tel:8(921)562-33-27" target="_blank">+7 921 562-33-27</a>
           </div>
           <!-- /.contacts-phone -->
           <div class="contacts-email">
-            <a href="mailto:pinestudio3d@gmail.com">pinestudio3d@gmail.com</a>
+            <a href="mailto:pinestudio3d@gmail.com" target="_blank">pinestudio3d@gmail.com</a>
           </div>
           <!-- /.contacts-email -->
           <div class="contacts-social">
@@ -632,16 +632,9 @@
   <script src="js/arrow.js"></script>
   <script src="js/up.js"></script>
   <script src="js/burger.js"></script>
+  <script src="js/twentytwenty-settings.js"></script>
   <!-- endbuild -->
 
-  <script>
-    $(window).on('load', function () {
-      $(function () {
-        $("#container1").twentytwenty();
-        $("#container2").twentytwenty();
-      });
-    });
-  </script>
 
 
 </body>
